[tool.poetry]
name = "protomaps"
version = "0.1.0"
description = ""
authors = ["Reid Hewitt <sam.hew.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mapbox-vector-tile = "^2.0.1"
pymbtiles = "^0.5.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
